# tapasco

./: .ci-disabled.yml  .editorconfig  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Ethernet.json  GETTINGSTARTED-zynq.md  GETTINGSTARTED.md  README.md  afihelper.py  build.sbt  gitlab-ci-base.yml  install_ar71715.sh  release.sh  setup.sh  sim_setup.sh  tapasco-init.sh  test.json
arch/: CMakeLists.txt
arch/axi4mm/: CMakeLists.txt  axi4mm.tcl  referencearg.directives.template
arch/baseline/: CMakeLists.txt  README.md  architecture.description  baseline.tcl  referencearg.directives.template  sim.tcl.template  tb.v.template  test-api.vh  test-harness.vh  valuearg.directives.template
arch/common/: Makefile  README.md  arch.tcl
arch/include/: tapasco.h  tapasco.hpp  tapasco_errors.h  tapasco_types.h
arch/tests/: CMakeLists.txt  CumulativeAverage.hpp  InterruptLatency.hpp  JobThroughput.hpp  README.md  TransferSpeed.hpp  tapasco_benchmark.cpp  tapasco_debug.cpp  tpc_benchmark.cpp  tpc_debug.cpp
common/: CMakeLists.txt  common.tcl  common_2015.2.tcl  common_2015.3.tcl  common_2015.4.tcl  common_2016.1.tcl  common_2016.2.tcl  common_2016.3.tcl  common_2016.4.tcl  common_2017.1.tcl  common_2017.2.tcl  common_2017.3.tcl  common_2017.4.tcl  common_2018.1.tcl  common_2018.2.tcl  common_2018.3.tcl  common_2019.1.tcl  common_ip.tcl  design.master.tcl.template  evaluate_ip.tcl.template  hls.tcl.template  hls_patch_saif.sh  hls_patch_subcores.sh  hls_patch_supported_families.sh  ip.tcl  ip_report.xml.template  repack-edn.tcl  slurm.job.template
common/include/: gen_fixed_size_pool.h  gen_mem.h  gen_queue.h  gen_stack.h
common/scripts/: Vivado_init.tcl
common/src/: Makefile  gen_mem.c  gen_mem_test  gen_mem_test.c  gen_queue.c  gen_queue_test.c  log.c
examples/: CMakeLists.txt  README.md  examples.cmake
examples/arrayinit/: CMakeLists.txt  arrayinit-example-mt-ff.cc  arrayinit-example-mt.c  arrayinit-example.c  arrayinit.bd  arrayinit.cfg
examples/arraysum/: CMakeLists.txt  arraysum-example-mt-ff.cc  arraysum-example-mt.c  arraysum-example.c  arraysum.bd  arraysum.cfg
examples/arrayupdate/: CMakeLists.txt  arrayupdate-example-mt.c  arrayupdate-example.c
examples/basic_test/: CMakeLists.txt  basic_test.bd  basic_test.cfg  basic_test.cpp
examples/benchmark-alloc-free/: CMakeLists.txt  alloc-speed.gnuplot  benchmark-alloc-dealloc.c  benchmark-alloc-dealloc_zc_10-09-2015_1040.csv  makeplot.sh
examples/benchmark-cd/: CMakeLists.txt  benchmark-cd.c  benchmark-cd_zc_10-03-2015_1435.csv  benchmark-cd_zc_10-03-2015_1630.csv  benchmark-cd_zc_10-03-2015_1800.csv  benchmark-cd_zc_10-03-2015_1905.csv  benchmark-cd_zc_11-03-2015_1255.csv  benchmark-cd_zc_11-03-2015_1645.csv  benchmark-cd_zc_11-03-2015_1717.csv  benchmark-cd_zc_11-03-2015_1730.csv  benchmark-cd_zc_11-03-2015_1830.csv  job-speed.gnuplot  makeplot.sh
examples/benchmark-latency/: CMakeLists.txt  benchmark-latency.c  benchmark-latency.cpp
examples/benchmark-mem/: CMakeLists.txt  benchmark-mem.c  benchmark-mem.cpp  benchmark-mem_zc_06-03-2015_1300.csv  makeplot.sh  mem-02-03-15.gnuplot  mem_mtdoom_02-03-15_1530.csv  mem_zc_02-03-15_1530.csv  timer.h  transfer-speed.gnuplot
examples/image_processing/: CMakeLists.txt  cliparser.cpp  hsa_aql_queue.h  imgproc.cpp  stringtools.cpp
examples/machsuite-harness/: CMakeLists.txt  machsuite-harness.c  machsuite-harness.h  makeplot.sh
examples/memcheck/: CMakeLists.txt  memcheck-mt-ff.cc  memcheck-mt.c  memcheck.c
examples/programSI5324/: CMakeLists.txt  programSI5324.cpp
examples/tapasco-benchmark/: CMakeLists.txt  InterruptLatency.hpp  JobThroughput.hpp  TransferSpeed.hpp  tapasco_benchmark.cpp
examples/tapasco-debug/: CMakeLists.txt  tapasco_debug.cpp
examples/warraw/: CMakeLists.txt  warraw-example-mt-ff.cc  warraw-example-mt.c  warraw-example.c  warraw.bd  warraw.cfg
kernel/date_sobel/: CMakeLists.txt  sobel.cpp  sobel_tb.cpp
kernel/rot13/: CMakeLists.txt  rot13.cpp  tapasco_rot13.cpp  tpc_rot13.cpp
kernel/sudoku/: CMakeLists.txt  Makefile  hard_sudoku_solution.txt  kernel.description  sudoku_tb.v  tb-code.v
platform/: CMakeLists.txt
platform/AU250/: AU250.tcl  platform.json
platform/aws/: aws.tcl  opt_design_post.tcl  opt_design_pre.tcl  place_design_post.tcl  platform.json  route_design_post.tcl
platform/common/: addressmap.tcl  debug.tcl  platform.tcl
platform/include/: platform.h  platform_caps.h  platform_devctx.h  platform_device_operations.h  platform_errors.h  platform_info.h  platform_types.h
platform/mpsoc/: CMakeLists.txt  mpsoc.tcl
platform/netfpga_sume/: board.xdc  diff.diff  netfpga_sume.tcl  nf_sume_ddr3A.prj  platform.json
platform/pcie/: CMakeLists.txt  pcie_base.tcl  platform.cmake
platform/pynq/: platform.description  platform.json  pynq.benchmark  pynq.tcl
platform/tests/: CMakeLists.txt  common.h  iplatform.c  platform_slots.c  platform_stress_alloc.c  platform_stress_ioctl.c
platform/vc709/: CMakeLists.txt  platform.description  platform.json  vc709.benchmark  vc709.tcl
platform/vcu108/: platform.json  vcu108.tcl
platform/vcu118/: platform.json  vcu118.tcl
platform/vcu1525/: platform.json  vcu1525.tcl
platform/zc706/: platform.description  zc706.benchmark  zc706.tcl
platform/zcu102/: platform.json  zcu102.tcl
platform/zcu102revd/: platform.json  zcu102revd.benchmark  zcu102revd.tcl
platform/zedboard/: platform.description  platform.json  zedboard.benchmark  zedboard.tcl
platform/zynq/: CMakeLists.txt  buildLibs.py  platform.cmake  zynq.tcl
platform/zynqmp/: CMakeLists.txt  interrupts.dtsi  platform.cmake  zynqmp.tcl
runtime/: CMakeLists.txt
runtime/arch/: CMakeLists.txt
runtime/cmake/: Tapasco.cmake  clang_toolchain.cmake  zynq_cross_toolchain.cmake
runtime/common/: CMakeLists.txt
runtime/examples/: CMakeLists.txt
runtime/kernel/: .clang-format  .gitignore  99-tapasco.rules  CMakeLists.txt  Kbuild  Makefile  tapasco-tlkm.sublime-workspace  tlkm.mod  tlkm_module.c  tlkm_module.h
runtime/libtapasco/: build.rs  (+5 more)
tlkm/: CMakeLists.txt  Makefile  README.md  tlkm_module.c
(+2371 files in other folders)
