project(tlkm VERSION 1.0 LANGUAGES C CXX)

add_library(tlkm INTERFACE)

target_include_directories(tlkm INTERFACE $<INSTALL_INTERFACE:user> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/user> $<INSTALL_INTERFACE:.> $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/>)

install(TARGETS tlkm EXPORT TapascoTLKMConfig
        ARCHIVE  DESTINATION ${CMAKE_INSTALL_LIBDIR}
        LIBRARY  DESTINATION ${CMAKE_INSTALL_LIBDIR}
        RUNTIME  DESTINATION ${CMAKE_INSTALL_BINDIR})

install(EXPORT TapascoTLKMConfig DESTINATION share/Tapasco/cmake)

export(TARGETS tlkm FILE TapascoTLKMConfig.cmake)
